tests/negative/typecheck/negate.orng
// negate.orng:5:20: error: expected a value of type `Char`, got a value of type `Int`
// fn main()->Char {-3}
//                   ^
// 
fn main()->Char {-3}